minor fixes to content, updated video on getting started

--- a/src/components/Aside.astro
+++ b/src/components/Aside.astro
@@ -109,7 +109,7 @@ const { viewBox, d } = icons[type];
 	.note {
 		// border-color: var(--custom-dark-blue);
 		// background-color: var(--custom-dark-blue-25);
-		background-color: var(--theme-dim-lighter);
+		background-color: var(--custom-grey-1-10);
 		border-color: var(--theme-accent);
 		.title {
 			color: var(--theme-accent)
