--- a/src/components/ResourceThumb.astro
+++ b/src/components/ResourceThumb.astro
@@ -47,12 +47,12 @@ import { Icon } from 'astro-icon'
             
         }
         img {
-            background-color: var(--custom-white);
+            background-color: var(--custom-grey-1-50);
             box-shadow: 3px 3px 6px var(--custom-grey-1-50);
             flex: 1;
             max-width: 100%;
             max-height: 100%;
-            object-fit: cover;
+            object-fit: contain;
         }
     }
     
