initial QR code component set up

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -129,7 +129,7 @@ if (isFallback) canonicalURL.pathname = canonicalURL.pathname.replace(`/${lang}/
 	    	<meta name="msapplication-TileColor" content="#FFFFFF">
 	    	<meta name="theme-color" content="#ffffff"> -->
 
-
+	    	<FooterJS></FooterJS>
 	</head>
 
 	<body>
@@ -158,7 +158,7 @@ if (isFallback) canonicalURL.pathname = canonicalURL.pathname.replace(`/${lang}/
 			</slot>
 		</div>
 		<!-- <ReloadPrompt /> -->
-		<FooterJS/>
+		
 		<!--Start of Tawk.to Script-->
 		<script type="text/javascript">
 			var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
