--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -12,7 +12,7 @@ import { rtlLanguages } from '../i18n/languages';
 import { useTranslations } from '../i18n/util';
 import { getLanguageFromURL } from '../util';
 import { getPageCategory } from '../util/getPageCategory';
-//import { pwaInfo } from 'virtual:pwa-info';
+import { pwaInfo } from 'virtual:pwa-info';
 import ReloadPrompt from '../components/ReloadPrompt.astro';
 
 
@@ -121,13 +121,13 @@ if (isFallback) canonicalURL.pathname = canonicalURL.pathname.replace(`/${lang}/
 		</style>
 
 		<!-- Vite PWA code | temp disable for other updates-->
-		<!-- <script src="/src/pwa.ts"></script>
+		<script src="/src/pwa.ts"></script>
 		{ pwaInfo && <Fragment set:html={pwaInfo.webManifest.linkTag} /> }
 		<link rel="icon" href="/favicon.svg" type="image/svg+xml">
 	    	<link rel="apple-touch-icon" href="/favicon.svg">
 	    	<link rel="mask-icon" href="/favicon.svg" color="#FFFFFF">
 	    	<meta name="msapplication-TileColor" content="#FFFFFF">
-	    	<meta name="theme-color" content="#ffffff"> -->
+	    	<meta name="theme-color" content="#ffffff">
 
 
 	</head>
