--- a/src/pages/[lang]/offline.astro
+++ b/src/pages/[lang]/offline.astro
@@ -9,9 +9,9 @@ const t = useTranslations(Astro);
 ---
 
 <SplashLayout title={t('404.title')}>
-	<h1>404</h1>
-	<p>{t('404.content')}</p>
-	<a href={`/${lang}/`}>{t('404.linkText')}</a>
+	<h1>Offline Notice</h1>
+	<p>Looks like you're offline and don't have this page pre-downloaded.  Try visiting this page again when you're back online.</p>
+	<a href="/en/getting-started">Go Back Home</a>
 </SplashLayout>
 
 <!-- <script>
