--- a/src/pages/offline.astro
+++ b/src/pages/offline.astro
@@ -1,5 +1,5 @@
 ---
-import FourOhFour from './[lang]/404.astro';
+import Offline from './[lang]/offline.astro';
 ---
 
-<FourOhFour />
+<Offline />
