--- a/src/components/LeftSidebar/SidebarContent.astro
+++ b/src/components/LeftSidebar/SidebarContent.astro
@@ -46,6 +46,7 @@ const lang = getLanguageFromURL(Astro.url.pathname);
 								href={`${Astro.site?.pathname}${lang}/${slug}/`}
 								aria-current={`${currentPageMatch.endsWith(slug) ? 'page' : 'false'}`}
 								data-current-parent={`${isSubPage(currentPageMatch, slug) ? 'true' : 'false'}`}
+								rel="prefetch"
 							>
 								<Fragment set:html={text} /> <!-- {isFallback && <sup class="fallback">EN</sup>} -->
 							</a>
