removed disabled class from feedback button

--- a/src/components/Header/FeedbackButton.astro
+++ b/src/components/Header/FeedbackButton.astro
@@ -24,7 +24,7 @@ const instanceId = Math.round(Math.random() * 10e9).toString(36);
 ---
 
 <feedback-form>
-	<button data-open-modal disabled>
+	<button data-open-modal>
 		<!-- Multi language version -->
 		<!-- <UIString key="feedback.button" /> -->
 		Feedback
