--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -121,13 +121,13 @@ if (isFallback) canonicalURL.pathname = canonicalURL.pathname.replace(`/${lang}/
 		</style>
 
 		<!-- Vite PWA code | temp disable for other updates-->
-			<script src="/src/pwa.ts"></script>
+			<!-- <script src="/src/pwa.ts"></script>
 			{pwaInfo && <Fragment set:html={pwaInfo.webManifest.linkTag} /> }
 			<link rel="icon" href="/favicon.png" type="image/png" />
 	    	<link rel="apple-touch-icon" href="/favicon.png" />
 	    	<link rel="mask-icon" href="/favicon.png" color="#FFFFFF" />
 	    	<meta name="msapplication-TileColor" content="#FFFFFF" />
-	    	<meta name="theme-color" content="#ffffff" />
+	    	<meta name="theme-color" content="#ffffff" /> -->
 
 
 	</head>
