--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -14,6 +14,7 @@ import { getLanguageFromURL } from '../util';
 import { getPageCategory } from '../util/getPageCategory';
 import { pwaInfo } from 'virtual:pwa-info';
 import ReloadPrompt from '../components/ReloadPrompt.astro';
+import SplashAnimation from '../components/SplashAnimation.astro';
 
 
 export interface Props {
@@ -133,6 +134,7 @@ if (isFallback) canonicalURL.pathname = canonicalURL.pathname.replace(`/${lang}/
 	</head>
 
 	<body>
+		<SplashAnimation/>
 		<Header currentPage={currentPage} />
 		<main class="layout">
 			
