Basic generic modal component set up, desktop only so far; QR code content set up to use current page URL

--- a/src/components/PdfFrame.astro
+++ b/src/components/PdfFrame.astro
@@ -12,7 +12,7 @@ const { link } = Astro.props as Props;
   <div class="meta">
     <p>Link to file: {Astro.site}{link}</p>
     <p>QR Code: 
-      <QrCode/>
+      <QrCode link={link}/>
     </p>
   </div>
   <iframe src={link}></iframe>
