--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -15,6 +15,7 @@ import { getPageCategory } from '../util/getPageCategory';
 import { pwaInfo } from 'virtual:pwa-info';
 import ReloadPrompt from '../components/ReloadPrompt.astro';
 import SplashAnimation from '../components/SplashAnimation.astro';
+import QrCodeModal from '~/components/PopUps/QrCodeModal.astro';
 
 
 export interface Props {
@@ -30,7 +31,7 @@ const bcpLang = normalizeLangTag(lang);
 const currentPage = url.pathname;
 const t = useTranslations(Astro);
 const formatTitle = (content: { title?: string }) =>
-	content.title ? `${content.title} 🚀 ${t('site.title')}` : t('site.title');
+	content.title ? `${content.title} | ${t('site.title')}` : t('site.title');
 // Ensures the canonicalURL always has a trailing slash.
 const canonicalURL = new URL(Astro.url.pathname.replace(/([^/])$/, '$1/'), Astro.site);
 if (isFallback) canonicalURL.pathname = canonicalURL.pathname.replace(`/${lang}/`, '/en/');
@@ -167,6 +168,8 @@ if (isFallback) canonicalURL.pathname = canonicalURL.pathname.replace(`/${lang}/
 				<Footer />
 			</slot>
 		</div>
+
+		<QrCodeModal/>
 		<!-- <ReloadPrompt /> -->
 		
 		<!--Start of Tawk.to Script-->
