--- a/src/components/RightSidebar/RightSidebar.astro
+++ b/src/components/RightSidebar/RightSidebar.astro
@@ -4,6 +4,7 @@ import ContributeMenu from './ContributeMenu.astro';
 import CommunityMenu from './CommunityMenu.astro';
 import { useTranslations } from '../../i18n/util';
 import generateToc from '../../util/generateToc';
+import ShareButton from './ShareButton.astro';
 
 const t = useTranslations(Astro);
 
@@ -22,6 +23,10 @@ const overview = t('rightSidebar.overview');
 			/>
 		)
 	}
+	<div class="buttons">
+		<ShareButton/>
+	</div>
+	
 	<!-- <ContributeMenu i18nReady={content.i18nReady} editHref={githubEditUrl} />
 	<CommunityMenu /> -->
 	
@@ -37,6 +42,14 @@ const overview = t('rightSidebar.overview');
 	.feedback-section {
 		margin-block: 2rem;
 		margin-inline-start: 2rem;
+	}
+
+	.buttons{
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		margin-top: 2rem;
 	}
 
 	@media (min-width: 50em) {
