--- a/src/components/PopUps/ModalWrapper.astro
+++ b/src/components/PopUps/ModalWrapper.astro
@@ -6,7 +6,7 @@ import Button from '~/components/Button.astro'
 const { modalType } = Astro.props as Props;
 ---
 
-<div class='ModalWrapper active'>
+<div class='ModalWrapper'>
   
   <div class="modalBackdrop"></div>
  
@@ -20,10 +20,7 @@ const { modalType } = Astro.props as Props;
 </div>
 
 <style lang="scss">
-  $fontSize: 1rem;
-  $borderSize: 2px;
-  $color: #454257;
-  $transition: 0.35s linear;
+  $transition: 0.15s linear;
   .ModalWrapper {
       display: block;
       position: fixed;
@@ -53,15 +50,16 @@ const { modalType } = Astro.props as Props;
       }
       .modalCloseButton{
         position: absolute;
-        top: -2rem;
-        right: -2rem;
+        top: 10px;
+        right: 10px;
         z-index: 3;
-        font-size: 4rem;
+        font-size: 2rem;
         font-weight: 800;
-        width: 5rem;
-        height: 5rem;
-        border-radius: 100%;
-        background-color: #FFF;
+        width: 3rem;
+        height: 3rem;
+        border: 3px solid var(--theme-divider);
+        border-radius: 0.5rem;
+        background-color: transparent;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -69,29 +67,42 @@ const { modalType } = Astro.props as Props;
         transition: 0.15s;
         span{
           position: relative;
-          top: -0.25rem;
-          color: #000;
+          top: -0.1rem;
+          color: var(--theme-text);
           transition: 0.15s;
         }
         &:hover{
-          background-color: #000;
+          background-color: var(--theme-text);
           span{
-            color: #FFF;
+            color: var(--theme-bg);
           }
         }
       }
       .modalInner{
-        background-color: #FFF;
         position: absolute;
         top: 50%;
         left: 50%;
-        transform: translate(-50%,-50%);
+        transform: translate( -50%, calc(-50% + 50px) );
         max-height: 100%;
         width: 100%;
         max-width: 800px;
-        /*aspect-ratio: 16/9;*/
+        aspect-ratio: 16/9;
         z-index: 2;   
 
+        font-size: var(--theme-text-base);
+        margin: 1.5rem auto auto;
+        border: 1px solid var(--theme-divider);
+        border-radius: 0.5rem;
+        background-color: var(--theme-bg);
+        box-shadow: 0 0.75rem 1rem var(--theme-backdrop-overlay);
+        transition: $transition;
+      }
+      &.active{
+        .modalInner{
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%,-50%);
+        }
       }
   }
 
@@ -101,6 +112,7 @@ const { modalType } = Astro.props as Props;
 <script type="text/javascript">
   function modalClose(){
     var targetElement = document.querySelector(".ModalWrapper");
-    targetElement.classList.remove("active")
+    targetElement.classList.remove("active");
+
   }
 </script>
