--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -15,7 +15,7 @@ import { getPageCategory } from '../util/getPageCategory';
 import { pwaInfo } from 'virtual:pwa-info';
 import ReloadPrompt from '../components/ReloadPrompt.astro';
 import SplashAnimation from '../components/SplashAnimation.astro';
-import QrCodeModal from '~/components/PopUps/QrCodeModal.astro';
+import QRCodeModal from '~/components/PopUps/QRCodeModal.astro';
 
 
 export interface Props {
@@ -169,7 +169,7 @@ if (isFallback) canonicalURL.pathname = canonicalURL.pathname.replace(`/${lang}/
 			</slot>
 		</div>
 
-		<QrCodeModal/>
+		<QRCodeModal/>
 		<!-- <ReloadPrompt /> -->
 		
 		<!--Start of Tawk.to Script-->
