theme color update

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -134,9 +134,9 @@ if (isFallback) canonicalURL.pathname = canonicalURL.pathname.replace(`/${lang}/
 			{pwaInfo && <Fragment set:html={pwaInfo.webManifest.linkTag} /> }
 			<link rel="icon" href="/favicon.png" type="image/png" />
 	    	<link rel="apple-touch-icon" href="/favicon.png" />
-	    	<link rel="mask-icon" href="/favicon.png" color="#FFFFFF" />
-	    	<meta name="msapplication-TileColor" content="#FFFFFF" />
-	    	<meta name="theme-color" content="#ffffff" /> 
+	    	<link rel="mask-icon" href="/favicon.png" color="#054C62" />
+	    	<meta name="msapplication-TileColor" content="#054C62" />
+	    	<meta name="theme-color" content="#054C62" /> 
 
 
 	</head>
