--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -16,6 +16,7 @@ import { pwaInfo } from 'virtual:pwa-info';
 import ReloadPrompt from '../components/ReloadPrompt.astro';
 import SplashAnimation from '../components/SplashAnimation.astro';
 import QRCodeModal from '~/components/PopUps/QRCodeModal.astro';
+import OptionsModal from '~/components/PopUps/OptionsModal.astro'; 
 
 
 export interface Props {
@@ -131,13 +132,13 @@ if (isFallback) canonicalURL.pathname = canonicalURL.pathname.replace(`/${lang}/
 		</style>
 
 		<!-- Vite PWA code | temp disable for other updates-->
-			<script src="/src/pwa.ts"></script>
+			<!-- <script src="/src/pwa.ts"></script>
 			{pwaInfo && <Fragment set:html={pwaInfo.webManifest.linkTag} /> }
 			<link rel="icon" href="/favicon.png" type="image/png" />
 	    	<link rel="apple-touch-icon" href="/favicon.png" />
 	    	<link rel="mask-icon" href="/favicon.png" color="#054C62" />
 	    	<meta name="msapplication-TileColor" content="#054C62" />
-	    	<meta name="theme-color" content="#054C62" /> 
+	    	<meta name="theme-color" content="#054C62" /> --> 
 
 	    	<FooterJS></FooterJS>
 	</head>
@@ -170,6 +171,7 @@ if (isFallback) canonicalURL.pathname = canonicalURL.pathname.replace(`/${lang}/
 		</div>
 
 		<QRCodeModal/>
+		<OptionsModal/>
 		<!-- <ReloadPrompt /> -->
 		
 		<!--Start of Tawk.to Script-->
