options modal started

--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -5,6 +5,7 @@ import LanguageSelect from './LanguageSelect';
 import Search from './Search.astro';
 import ThemeToggleButton from './ThemeToggleButton';
 import FeedbackButton from './FeedbackButton.astro';
+import OptionsButton from './OptionsButton.astro';
 
 import { getLanguageFromURL } from '../../util';
 import { getDocSearchStrings, useTranslations } from '../../i18n/util';
@@ -79,6 +80,8 @@ const t = useTranslations(Astro);
 		{import.meta.env.PUBLIC_FEATURE_SEARCH=="true" &&
 			<Search {lang} labels={docsearchStrings} />
 		}
+
+		<OptionsButton/>
 		
 		<SidebarToggle client:idle />
 	</nav>
