--- a/src/components/PopUps/OptionsModal.astro
+++ b/src/components/PopUps/OptionsModal.astro
@@ -1,19 +1,15 @@
 ---
 // This is the frontmatter section where you can import other components or scripts if needed
 
-import QrCode from '~/components/QrCode.astro'
 import ModalWrapper from '~/components/PopUps/ModalWrapper.astro';
 
 ---
 
-<div class='QrCodeModal'>
-  <ModalWrapper modalType="qrcode">
+<div class='OptionsModal'>
+  <ModalWrapper data-modal="options">
     <div class="inner">
-      <h2>Share this page via QR Code</h2>
-      <div class="main">
-        <QrCode link={Astro.url}/>
-      </div>
-      <a class="textLink" href={Astro.url}>{Astro.url}</a>
+      <h2>Progressive Web App Options</h2>
+      
     </div>
   </ModalWrapper>  
 </div>
@@ -22,7 +18,7 @@ import ModalWrapper from '~/components/PopUps/ModalWrapper.astro';
   $fontSize: 1rem;
   $borderSize: 2px;
   $color: #454257; 
-  .QrCodeModal {
+  .OptionsModal {
       .inner{
         display: flex;
         flex-direction: column;
