--- a/src/components/ResourceCard.astro
+++ b/src/components/ResourceCard.astro
@@ -71,14 +71,15 @@ import { Icon } from 'astro-icon'
     }
   }
   </style>
-  <style>
+  <style type="scss">
     :root {
     --blue: #007B98;
     --teal: #00DFC3;
     }
     .icon-container {
-        /* background-color: var(--theme-bg-gradient); */
-        background-color: var(--theme-dim-lighter);
+        // background-color: var(--theme-bg-gradient);
+        // background-color: var(--theme-dim-lighter);
+        background-color: var(--theme-bg-gradient-top);
         display: inline-flex;
         align-items: center;
         justify-content: center;
@@ -93,7 +94,7 @@ import { Icon } from 'astro-icon'
     .resource-card {
       /* styles for the card container */
       /* background-color: var(--theme-code-inline-bg); */
-      background-color: var(--theme-bg-gradient);
+      background-color: var(--theme-bg-gradient-bottom);
       box-sizing: border-box;
       /* margin: 0rem 2% 2% 0rem; */
       /* max-width: 31%; */
@@ -106,7 +107,14 @@ import { Icon } from 'astro-icon'
     }
     .resource-card:hover,.resource-card:focus {
         border-color: var(--theme-accent);
+        background-color: var(--theme-bg-gradient-top);
         box-shadow: -2px 2px 0px var(--theme-accent);
+        .icon-container {
+          background-color: var(--theme-bg-gradient-bottom);
+          [astro-icon] {
+            // color: var(--custom-white);
+          }
+        }
     }
     .resource-card h3 {
         margin-top: 1.5rem;
