--- a/src/components/tutorial/TutorialNav.astro
+++ b/src/components/tutorial/TutorialNav.astro
@@ -89,7 +89,7 @@ const mainSection = id === "mainsection";
 
 	.unit {
 		padding: 1em;
-		background-color: var(--theme-bg-offset);
+		background-color: var(--custom-teal-25);
 	}
 
 	.tutorial-nav ol.lessons {
