--- a/src/components/tutorial/UnitProgressIcon.astro
+++ b/src/components/tutorial/UnitProgressIcon.astro
@@ -121,7 +121,7 @@ const t = useTranslations(Astro);
 	:global([aria-selected='true']) unit-progress-icon /* 2 */ {
 		font-weight: bold;
 		fill: var(--theme-text);
-		background-color: var(--theme-bg-offset);
+		background-color: var(--custom-teal-25);
 	}
 
 	:global([aria-selected='true']) .segment:not(.done) {
