--- a/src/components/PageContent/PageContent.astro
+++ b/src/components/PageContent/PageContent.astro
@@ -95,6 +95,23 @@ const direction = rtlLanguages.has(lang) ? 'rtl' : 'ltr';
 			
 		}
 	}
+	.next-previous-nav {
+		justify-content: flex-end;
+		a {
+			@media (min-width: 50em) {
+				max-width: 50%;
+			}
+			text-decoration: none; 
+			color: var(--custom-teal-90);
+			border-color: var(--custom-teal-50);
+			box-shadow: 0px 1px 2px var(--custom-dark-blue-50);
+			&:hover {
+				color: var(--custom-teal);
+				border-color: var(--custom-teal-90);
+				box-shadow: 0px 1px 2px var(--custom-dark-blue-90);
+			}
+		}
+	}
 </style>
 
 <style>
@@ -154,4 +171,5 @@ const direction = rtlLanguages.has(lang) ? 'rtl' : 'ltr';
 		gap: 1rem;
 		margin-bottom: 1.5rem;
 	}
+	
 </style>
