--- a/src/components/Header/FeedbackButton.astro
+++ b/src/components/Header/FeedbackButton.astro
@@ -124,7 +124,7 @@ const instanceId = Math.round(Math.random() * 10e9).toString(36);
 	</dialog>
 </feedback-form>
 
-<script>
+<script is:inline>
 	class FeedbackForm extends HTMLElement {
 		constructor() {
 			super();
