now correctly targeting separate modal instances, targeting all on close function, added close via ESC key

--- a/src/components/Header/OptionsButton.astro
+++ b/src/components/Header/OptionsButton.astro
@@ -6,7 +6,7 @@ import Button from '~/components/Button.astro'
 const { heading, body } = Astro.props as Props;
 ---
 
-<button class='OptionsButton' onclick="modalOpen();">
+<button class='OptionsButton' onclick="modalOpenOptions();">
   <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="currentColor" d="M10 12a2 2 0 1 0 4 0a2 2 0 0 0-4 0zm0-6a2 2 0 1 0 4 0a2 2 0 0 0-4 0zm0 12a2 2 0 1 0 4 0a2 2 0 0 0-4 0z"/></svg>
 </button>
 
@@ -33,7 +33,7 @@ const { heading, body } = Astro.props as Props;
 </style>
 
 <script type="text/javascript">
-  function modalOpen(){
+  function modalOpenOptions(){
     var targetElement = document.querySelector(".ModalWrapper[data-modal='options']");
     targetElement.classList.add("active");
   }
