--- a/src/components/PopUps/OptionsModal.astro
+++ b/src/components/PopUps/OptionsModal.astro
@@ -6,9 +6,9 @@ import ModalWrapper from '~/components/PopUps/ModalWrapper.astro';
 ---
 
 <div class='OptionsModal'>
-  <ModalWrapper data-modal="options">
+  <ModalWrapper modalType="options">
     <div class="inner">
-      <h2>Progressive Web App Options</h2>
+      <h2>CORE Options</h2>
       
     </div>
   </ModalWrapper>  
