--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -170,8 +170,8 @@ if (isFallback) canonicalURL.pathname = canonicalURL.pathname.replace(`/${lang}/
 			</slot>
 		</div>
 
-		<!-- <QRCodeModal/>
-		<OptionsModal/> -->
+		<QRCodeModal/>
+		<OptionsModal/> 
 		<!-- <ReloadPrompt /> -->
 		
 		<!--Start of Tawk.to Script-->
