--- a/src/components/PopUps/OptionsModal.astro
+++ b/src/components/PopUps/OptionsModal.astro
@@ -9,7 +9,27 @@ import ModalWrapper from '~/components/PopUps/ModalWrapper.astro';
   <ModalWrapper modalType="options">
     <div class="inner">
       <h2>CORE Options</h2>
-      
+      <div class="main">
+        
+        <div class="optionCell" data-netlify-identity-button>
+          <div class="icon">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="currentColor" d="M12 4a4 4 0 0 1 4 4a4 4 0 0 1-4 4a4 4 0 0 1-4-4a4 4 0 0 1 4-4m0 10c4.42 0 8 1.79 8 4v2H4v-2c0-2.21 3.58-4 8-4Z"/></svg>
+          </div>
+          <div class="text">
+            Log In
+          </div>
+        </div>
+
+        <div class="optionCell">
+          <div class="icon">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="currentColor" d="M5 20h14v-2H5m14-9h-4V3H9v6H5l7 7l7-7Z"/></svg>
+          </div>
+          <div class="text">
+            Install
+          </div>
+        </div>
+
+      </div>
     </div>
   </ModalWrapper>  
 </div>
@@ -29,9 +49,37 @@ import ModalWrapper from '~/components/PopUps/ModalWrapper.astro';
       }
       .main{
         margin: 2rem 0;
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        align-items: space-evenly;
       }
-      .textLink{
-        
+      .optionCell{
+        aspect-ratio: 1;
+        font-size: 1.5rem;
+        width: 8rem;
+        height: 8rem;
+        border: 3px solid var(--theme-divider);
+        border-radius: 0.5rem;
+        background-color: transparent;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
+        transition: 0.15s;
+        svg{
+          width: 4rem;
+          height: auto;
+        }
+        &:hover{
+          background-color: var(--theme-text);
+          color: var(--theme-bg);
+          svg{
+            fill: var(--theme-bg);
+          }
+        }
       }
   }
 
