--- a/src/layouts/SplashLayout.astro
+++ b/src/layouts/SplashLayout.astro
@@ -6,6 +6,8 @@ import { normalizeLangTag } from '../i18n/bcp-normalize';
 import { rtlLanguages } from '../i18n/languages';
 import { useTranslations } from '../i18n/util';
 import { getLanguageFromURL } from '../util';
+import QRCodeModal from '~/components/PopUps/QRCodeModal.astro';
+import OptionsModal from '~/components/PopUps/OptionsModal.astro'; 
 
 export interface Props {
 	title: string;
