testing removing FooterJS component

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -134,7 +134,7 @@ if (isFallback) canonicalURL.pathname = canonicalURL.pathname.replace(`/${lang}/
 		<!-- Vite PWA code | temp disable for other updates-->
 			
 
-	    	<FooterJS></FooterJS>
+	    	<!-- <FooterJS></FooterJS> -->
 	</head>
 
 	<body>
