--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -43,7 +43,7 @@ if (isFallback) canonicalURL.pathname = canonicalURL.pathname.replace(`/${lang}/
 	<head>
 		<HeadCommon />
 		<HeadSEO content={content} canonicalURL={canonicalURL} />
-		<HeadAnalytics/>
+		<!-- <HeadAnalytics/> -->
 		<title set:html={formatTitle(content)} />
 		<style>
 			body{
