--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -42,7 +42,7 @@ if (isFallback) canonicalURL.pathname = canonicalURL.pathname.replace(`/${lang}/
 <html dir={direction} lang={bcpLang} class="initial">
 	<head>
 		<HeadCommon />
-		<HeadSEO content={content} canonicalURL={canonicalURL} />
+		<!-- <HeadSEO content={content} canonicalURL={canonicalURL} /> -->
 		<!-- <HeadAnalytics/> -->
 		<title set:html={formatTitle(content)} />
 		<style>
