rolled back sidebar test, testing having no content on page

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -142,7 +142,15 @@ if (isFallback) canonicalURL.pathname = canonicalURL.pathname.replace(`/${lang}/
 		<Header currentPage={currentPage} />
 		<main class="layout">
 			
-			
+			<aside id="left-sidebar" class="sidebar">
+				<slot name="primary-sidebar">
+					<LeftSidebar currentPage={currentPage} />
+				</slot>
+			</aside>
+
+			<aside id="right-sidebar" class="sidebar">
+				<slot name="secondary-sidebar" />
+			</aside>
 
 			<div id="main-content" class="main-column">
 				<slot />
