testing using baselayout on index page

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -43,7 +43,7 @@ if (isFallback) canonicalURL.pathname = canonicalURL.pathname.replace(`/${lang}/
 		<HeadCommon />
 		<!-- <HeadSEO content={content} canonicalURL={canonicalURL} /> -->
 		<!-- <HeadAnalytics/> -->
-		<title set:html={formatTitle(content)} />
+		<!-- <title set:html={formatTitle(content)} /> -->
 		<style>
 			body{
 				animation: smoothLoad 1s;
