rolled back layout replacement

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,13 +23,13 @@ if (KNOWN_LANGUAGES.includes(newLangWithRegion)) {
 */
 
 
-import BaseLayout from '../layouts/BaseLayout.astro';
+import SplashLayout from '../layouts/SplashLayout.astro';
 ---
 
 <!-- <meta http-equiv="refresh" content="0;url=/en/getting-started" /> -->
 
-<BaseLayout >
+<SplashLayout title="Login Test">
 	<h1>Login Test</h1>
 	<p>Temp index page for testing login functions</p>
 	<a href="/en/getting-started">/en/getting-started</a>
-</BaseLayout>
+</SplashLayout>
