rolled back new modal removal

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -15,7 +15,8 @@ import { getPageCategory } from '../util/getPageCategory';
 /*import { pwaInfo } from 'virtual:pwa-info';*/
 /*import ReloadPrompt from '../components/ReloadPrompt.astro';*/
 import SplashAnimation from '../components/SplashAnimation.astro';
-
+import QRCodeModal from '~/components/PopUps/QRCodeModal.astro';
+import OptionsModal from '~/components/PopUps/OptionsModal.astro'; 
 
 
 export interface Props {
@@ -43,7 +44,7 @@ if (isFallback) canonicalURL.pathname = canonicalURL.pathname.replace(`/${lang}/
 		<HeadCommon />
 		<!-- <HeadSEO content={content} canonicalURL={canonicalURL} /> -->
 		<!-- <HeadAnalytics/> -->
-		<!-- <title set:html={formatTitle(content)} /> -->
+		<title set:html={formatTitle(content)} />
 		<style>
 			body{
 				animation: smoothLoad 1s;
@@ -163,7 +164,8 @@ if (isFallback) canonicalURL.pathname = canonicalURL.pathname.replace(`/${lang}/
 			</slot>
 		</div>
 
-		 
+		<QRCodeModal/>
+		<OptionsModal/> 
 		<!-- <ReloadPrompt /> -->
 		
 		<!--Start of Tawk.to Script-->
