--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -77,7 +77,9 @@ const t = useTranslations(Astro);
 			/>
 		}
 		
-		
+		{import.meta.env.PUBLIC_FEATURE_SEARCH=="true" &&
+			<Search {lang} labels={docsearchStrings} />
+		}
 
 		<OptionsButton/>
 		
