reset to before fix test

--- a/src/components/PopUps/OptionsModal.astro
+++ b/src/components/PopUps/OptionsModal.astro
@@ -15,9 +15,9 @@ import ModalWrapper from '~/components/PopUps/ModalWrapper.astro';
           <div class="icon">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="currentColor" d="M12 4a4 4 0 0 1 4 4a4 4 0 0 1-4 4a4 4 0 0 1-4-4a4 4 0 0 1 4-4m0 10c4.42 0 8 1.79 8 4v2H4v-2c0-2.21 3.58-4 8-4Z"/></svg>
           </div>
-          <div class="text">
+          <!-- <div class="text">
             Log In
-          </div>
+          </div> -->
         </div>
 
         <div class="optionCell">
