--- a/src/components/PopUps/OptionsModal.astro
+++ b/src/components/PopUps/OptionsModal.astro
@@ -3,21 +3,25 @@
 
 import ModalWrapper from '~/components/PopUps/ModalWrapper.astro';
 
+
 ---
 
 <div class='OptionsModal'>
   <ModalWrapper modalType="options">
     <div class="inner">
       <h2>CORE Options</h2>
+      <p>Currently logged in as: <span id="userEmail">userEmail</span></p>
+      
+
       <div class="main">
         
-        <div class="optionCell" data-netlify-identity-button>
+        <div class="optionCell" onClick="netlifyIdentity.open(); modalClose();">
           <div class="icon">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="currentColor" d="M12 4a4 4 0 0 1 4 4a4 4 0 0 1-4 4a4 4 0 0 1-4-4a4 4 0 0 1 4-4m0 10c4.42 0 8 1.79 8 4v2H4v-2c0-2.21 3.58-4 8-4Z"/></svg>
           </div>
-          <!-- <div class="text">
+          <div class="text">
             Log In
-          </div> -->
+          </div>
         </div>
 
         <div class="optionCell">
@@ -85,3 +89,39 @@ import ModalWrapper from '~/components/PopUps/ModalWrapper.astro';
 
 </style>
 
+<script>
+  
+
+
+  function delayedFunction() {
+    console.log("Delayed function has been executed.");
+
+    const user = netlifyIdentity.currentUser();
+   /* document.querySelectorAll('#userEmail').innerHTML(user.email);*/
+    console.log(user);
+    var elements = document.querySelectorAll('#userEmail');
+    
+    elements.forEach(element => {
+      //target all instances of ModalWrapper
+      element.innerHTML = user.email; 
+    });
+  }
+
+  function waitForDelay(seconds, callback) {
+    setTimeout(callback, seconds * 1000);
+  }
+
+  const delayInSeconds = 2; // Change this to the desired delay in seconds
+  waitForDelay(delayInSeconds, delayedFunction);
+
+
+  function modalClose(){
+    var elements = document.querySelectorAll('.ModalWrapper');
+    
+    elements.forEach(element => {
+      //target all instances of ModalWrapper
+      element.classList.remove("active"); 
+    });
+  }
+
+</script>
