--- a/src/components/HeadCommon.astro
+++ b/src/components/HeadCommon.astro
@@ -58,7 +58,7 @@ import '@fontsource/ibm-plex-mono/400-italic.css';
 	});
 </script>
 <!-- Fathom - beautiful, simple website analytics -->
-<!-- <script src="https://certain-quality.astro.build/script.js" data-site="EZBHTSIG" defer></script> -->
+<script src="https://certain-quality.astro.build/script.js" data-site="EZBHTSIG" defer></script>
 
 <!-- Netlify Identity - simple logins -->
 <script type="text/javascript" src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
