--- a/src/components/LeftSidebar/SidebarContent.astro
+++ b/src/components/LeftSidebar/SidebarContent.astro
@@ -12,7 +12,7 @@ export interface Props {
 	}>;
 	currentPageMatch: string;
 }
-type TabType = 'learn' | 'api';
+type TabType = 'learn' | 'api' | 'misc';
 
 const { type, defaultActiveTab, sidebarSections, currentPageMatch } = Astro.props as Props;
 const lang = getLanguageFromURL(Astro.url.pathname);
