3rd top-level tab added to left nav bar

--- a/src/components/LeftSidebar/LeftSidebar.astro
+++ b/src/components/LeftSidebar/LeftSidebar.astro
@@ -55,7 +55,7 @@ if (isReference) {
 	<SidebarToggleTabGroup
 		client:load
 		defaultActiveTab={activeTab}
-		labels={{ learn: t('leftSidebar.learnTab'), api: t('leftSidebar.referenceTab') }}
+		labels={{ learn: t('leftSidebar.learnTab'), api: t('leftSidebar.referenceTab'), misc: t('leftSidebar.miscTab') }}
 	/>
 	<ul class={`nav-groups`}>
 		<SidebarContent
