set up new feedback button and basic modal
Currently using a slightly stripped down version of the original feedback form inside a ModalWrapper component, still using custom HTML constructor element, unsure if that part needs to be rebuilt yet, either from existing code issue or new transferred code

--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -5,6 +5,7 @@ import LanguageSelect from './LanguageSelect';
 import Search from './Search.astro';
 import ThemeToggleButton from './ThemeToggleButton';
 import FeedbackButton from './FeedbackButton.astro';
+import FeedbackButtonNew from './FeedbackButtonNew.astro';
 import OptionsButton from './OptionsButton.astro';
 
 import { getLanguageFromURL } from '../../util';
@@ -66,7 +67,7 @@ const t = useTranslations(Astro);
 
 
 		{import.meta.env.PUBLIC_FEATURE_FEEDBACK=="true" &&
-			<FeedbackButton/>
+			<FeedbackButtonNew/>
 		}
 
 		{import.meta.env.PUBLIC_FEATURE_DARKMODE=="true" &&
